// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GatewayList > snapshot: cpi-admin persona > matches structural snapshot 1`] = `
{
  "buttons": [
    "Show deleted",
    "Refresh",
    "+ Register Gateway",
    "All32",
    "Production22",
    "Staging101",
    "Development0",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  "headings": [
    "Gateway Registry",
    "Production",
    "Staging",
  ],
  "links": [],
}
`;

exports[`GatewayList > snapshot: devops persona > matches structural snapshot 1`] = `
{
  "buttons": [
    "Refresh",
    "+ Register Gateway",
    "All32",
    "Production22",
    "Staging101",
    "Development0",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  "headings": [
    "Gateway Registry",
    "Production",
    "Staging",
  ],
  "links": [],
}
`;

exports[`GatewayList > snapshot: tenant-admin persona > matches structural snapshot 1`] = `
{
  "buttons": [
    "Refresh",
    "+ Register Gateway",
    "All32",
    "Production22",
    "Staging101",
    "Development0",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  "headings": [
    "Gateway Registry",
    "Production",
    "Staging",
  ],
  "links": [],
}
`;

exports[`GatewayList > snapshot: viewer persona > matches structural snapshot 1`] = `
{
  "buttons": [
    "Refresh",
    "+ Register Gateway",
    "All32",
    "Production22",
    "Staging101",
    "Development0",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  "headings": [
    "Gateway Registry",
    "Production",
    "Staging",
  ],
  "links": [],
}
`;
